--- a/tarimzeka-mobile/app.json
+++ b/tarimzeka-mobile/app.json
@@ -40,6 +40,9 @@
         }
       ]
     ],
+    "extra": {
+      "apiUrl": "http://192.168.1.7:3000/api"
+    },
     "experiments": {
       "typedRoutes": true
     }
